Add coverage for bookings without capture sessions